--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "firebase": "8.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-file-uploader": "^2.4.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "save": "^2.4.0",
