--- a/react_hosting/package.json
+++ b/react_hosting/package.json
@@ -1,20 +1,14 @@
 {
-  "name": "mynote",
+  "name": "react_hosting",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "firebase": "8.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-firebase-file-uploader": "^2.4.4",
-    "react-loader-spinner": "^4.0.0",
-    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "save": "^2.4.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
